force-app/main/default/objects/Apttus__CycleTimeGroupData__c/Apttus__CycleTimeGroupData__c.object-meta.xml
<CustomObject>
    <description>Holds the data captured on groups for cycle time reporting</description>
    <label>Cycle Time Group Data</label>
    <nameField>
        <displayFormat>CTGD-{0000000}</displayFormat>
        <label>CT Group Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Time Group Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>