force-app/main/default/objects/Apttus__CycleTimeGroupData__c/fields/Apttus__Agreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Agreement__c</fullName>
    <description>The agreement associated with the group</description>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Cycle Time Group Data</relationshipLabel>
    <relationshipName>Cycle_Time_Group_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>