force-app/main/default/objects/Apttus__CycleTimeGroupData__c/fields/Apttus__Cycle_Time_Group__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Cycle_Time_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The group associated with the cycle time data</description>
    <label>Cycle Time Group</label>
    <referenceTo>Apttus__CycleTimeGroup__c</referenceTo>
    <relationshipLabel>Cycle Time Group Data</relationshipLabel>
    <relationshipName>Cycle_Time_Group_Data</relationshipName>
    <type>Lookup</type>
</CustomField>