force-app/main/default/objects/Apttus__CycleTimeGroupData__c/fields/Apttus__Duration_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Duration_Business_Hours__c</fullName>
    <description>The duration (in hours) the field value remained in the group</description>
    <label>Duration (Hours)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>