force-app/main/default/objects/Apttus__CycleTimeGroupData__c/fields/Apttus__End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Apttus__End_Datetime__c</fullName>
    <description>The datetime when the field value departed the group</description>
    <label>End Datetime</label>
    <type>DateTime</type>
</CustomField>