force-app/main/default/objects/Apttus__CycleTimeGroupData__c/fields/Apttus__From__c.field-meta.xml
<CustomField>
    <fullName>Apttus__From__c</fullName>
    <description>The field value which marks the beginning of the group</description>
    <label>From Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>